<resources>
  <string name="app_name">Client Event Manager</string>
  <string name="main_label_clients">Clients</string>
  <string name="main_label_consultants">Consultants</string>
  <string name="main_label_employees">Employees</string>
  <string name="main_label_events">Events</string>
  <string name="main_menu_setElatosAccount">Set Elatos Account</string>
  <string name="main_menu_setGoogleAccount">Set Google Account</string>
  <string name="main_message_internetNotAccessible">Internet not accessible.</string>
  <string name="clients_title">Clients</string>
  <string name="clients_menu_add">Add Client</string>
  <string name="clients_menu_modify">Modify Client</string>
  <string name="clients_menu_delete">Delete Client</string>
  <string name="clients_menu_done">Select Client</string>
  <string name="clients_menu_syncronize">Syncronize Clients</string>
  <string name="clients_reallyDelete">Really delete client from database?</string>
  <string name="clients_yesDelete">OK</string>
  <string name="clients_noDelete">Cancel</string>
  <string name="client_title_add">Add Client</string>
  <string name="client_title_modify">Modify Client</string>
  <string name="client_menu_save">Save Client</string>
  <string name="client_label_code">Code</string>
  <string name="client_label_companyName">Company Name</string>
  <string name="client_label_businessAreas">Business Areas</string>
  <string name="client_label_setBusinessAreas">Set Business Areas</string>
  <string name="client_heading_adminHeadquarters">Administrative Headquarters</string>
  <string name="client_label_adminHeadquartersAddress">Address</string>
  <string name="client_label_adminHeadquartersZone">Zone</string>
  <string name="client_label_adminHeadquartersCity">City</string>
  <string name="client_label_adminHeadquartersProvince">Province</string>
  <string name="client_label_adminHeadquartersRegion">Region</string>
  <string name="client_label_adminHeadquartersArea">State</string>
  <string name="client_label_adminHeadquartersCountry">Country</string>
  <string name="client_label_adminHeadquartersLatitude">Latitude</string>
  <string name="client_label_adminHeadquartersLongitude">Longitude</string>
  <string name="client_heading_registeredOffice">Registered Office</string>
  <string name="client_label_registeredOfficeAddress">Address</string>
  <string name="client_label_registeredOfficeZone">Zone</string>
  <string name="client_label_registeredOfficeCity">City</string>
  <string name="client_label_registeredOfficeProvince">Province</string>
  <string name="client_label_registeredOfficeRegion">Region</string>
  <string name="client_label_registeredOfficeArea">State</string>
  <string name="client_label_registeredOfficeCountry">Country</string>
  <string name="client_label_registeredOfficeLatitude">Latitude</string>
  <string name="client_label_registeredOfficeLongitude">Longitude</string>
  <string name="client_label_registeredOfficeCertifiedEMail">CertifiedEMail</string>
  <string name="client_label_defaultCurrency">Default Currency</string>
  <string name="client_label_taxPayerNumber">Tax Payer Number</string>
  <string name="client_label_taxRegistrationNumber">Tax Registration Number</string>
  <string name="client_heading_mainPersonInCharge">Main Person In Charge</string>
  <string name="client_label_mainPersonInChargeName">Name</string>
  <string name="client_label_mainPersonInChargePhone">Phone</string>
  <string name="client_label_mainPersonInChargeCell">Cell</string>
  <string name="client_label_mainPersonInChargeFax">Fax</string>
  <string name="client_label_mainPersonInChargeVoIP">VoIP</string>
  <string name="client_label_mainPersonInChargeEMail">E-Mail</string>
  <string name="client_label_mainPersonInChargeWeb">Web</string>
  <string name="client_heading_businessData">Business Data</string>
  <string name="client_label_setBusinessDataBusinessCategory">Set</string>
  <string name="client_label_clearBusinessDataBusinessCategory">Clear</string>
  <string name="client_label_setBusinessDataInitialContactMeans">Set</string>
  <string name="client_label_clearBusinessDataInitialContactMeans">Clear</string>
  <string name="client_label_setBusinessDataBusinessConsultant">Set</string>
  <string name="client_label_clearBusinessDataBusinessConsultant">Clear</string>
  <string name="client_label_setBusinessDataReportingTechnicianEmployee">Set</string>
  <string name="client_label_clearBusinessDataReportingTechnicianEmployee">Clear</string>
  <string name="client_label_setBusinessDataContractIssuingEmployee">Set</string>
  <string name="client_label_clearBusinessDataContractIssuingEmployee">Clear</string>
  <string name="client_label_setAccountingDataPaymentType">Set</string>
  <string name="client_label_clearAccountingDataPaymentType">Clear</string>
  <string name="client_label_setAccountingDataBankAccount">Set</string>
  <string name="client_label_clearAccountingDataBankAccount">Clear</string>
  <string name="client_label_businessDataBusinessCategory">Business Category</string>
  <string name="client_label_businessDataInitialContactMeans">Initial Contact Means</string>
  <string name="client_label_businessDataBusinessConsultant">Business Consultant</string>
  <string name="client_label_businessDataReportingTechnicianEmployee">Reporting Technician</string>
  <string name="client_label_businessDataContractIssuingEmployee">Contract Issuer</string>
  <string name="client_heading_accountingData">Accounting Data</string>
  <string name="client_label_accountingDataPaymentType">Payment Type</string>
  <string name="client_label_accountingDataBankAccount">Bank Account</string>
  <string name="client_label_accountingDataTaxCategory">Tax Category</string>
  <string name="client_heading_workOrderLocations">Work Order Locations</string>
  <string name="client_label_morePeopleInCharge">More People In Charge</string>
  <string name="client_label_setWorkOrderLocations">Set Work Order Locations</string>
  <string name="client_heading_other">Other</string>
  <string name="client_label_phonecalls">Phone Calls</string>
  <string name="client_label_visits">Visits</string>
  <string name="client_label_attachments">Attachments</string>
  <string name="client_label_notes">Notes</string>
  <string name="client_label_effectiveOrPotentialClient">Effective Or Potential Client</string>
  <string name="client_label_effectiveClient">Effective</string>
  <string name="client_label_potentialClient">Potential</string>
  <string name="clientBusinessAreas_title">Client Business Areas</string>
  <string name="clientBusinessAreas_menu_done">Selection Done</string>
  <string name="clientBusinessAreas_label_primary">Primary</string>
  <string name="clientBusinessAreas_label_secondary">Secondary</string>
  <string name="clientBusinessAreas_label_none">None</string>
  <string name="clientBusinessAreas_label_defineBusinessAreas">Define Business Areas</string>
  <string name="businessAreas_title">Business Areas</string>
  <string name="businessAreas_menu_add">Add Business Area</string>
  <string name="businessAreas_menu_modify">Modify Business Area</string>
  <string name="businessAreas_menu_delete">Delete Business Area</string>
  <string name="businessAreas_reallyDelete">Really delete business area from database?</string>
  <string name="businessAreas_yesDelete">OK</string>
  <string name="businessAreas_noDelete">Cancel</string>
  <string name="businessArea_title_add">Add Business Area</string>
  <string name="businessArea_title_modify">Modify Business Area</string>
  <string name="businessArea_menu_save">Save Business Area</string>
  <string name="businessArea_message_codeUsed">Specified code is already in use.</string>
  <string name="businessArea_label_code">Code</string>
  <string name="businessArea_label_description">Description</string>
  <string name="businessArea_label_primaryConcern">Primary</string>
  <string name="businessArea_label_secondaryConcern">Secondary</string>
  <string name="businessArea_label_noConcern">None</string>
  <string name="peopleInCharge_title">Other People In Charge</string>
  <string name="peopleInCharge_menu_add">Add Person in Charge</string>
  <string name="peopleInCharge_menu_modify">Modify Person in Charge</string>
  <string name="peopleInCharge_menu_delete">Delete Person in Charge</string>
  <string name="peopleInCharge_reallyDelete">Really delete person in charge from database?</string>
  <string name="peopleInCharge_yesDelete">OK</string>
  <string name="peopleInCharge_noDelete">Cancel</string>
  <string name="personInCharge_title_add">Add Person in Charge</string>
  <string name="personInCharge_title_modify">Modify Person in Charge</string>
  <string name="personInCharge_menu_save">Save Person In Charge</string>
  <string name="personInCharge_label_roleName">Role Name</string>
  <string name="personInCharge_label_name">Person Name</string>
  <string name="personInCharge_label_phone">Phone</string>
  <string name="personInCharge_label_cell">Cell</string>
  <string name="personInCharge_label_fax">Fax</string>
  <string name="personInCharge_label_voip">VoIP</string>
  <string name="personInCharge_label_email">E-Mail</string>
  <string name="personInCharge_label_web">Web</string>
  <string name="personInCharge_message_noRoleName">No role specified for person in charge.</string>
  <string name="workOrderLocation_label_address">Address</string>
  <string name="workOrderLocation_label_zone">Zone</string>
  <string name="workOrderLocation_label_city">City</string>
  <string name="workOrderLocation_label_province">Province</string>
  <string name="workOrderLocation_label_region">Region</string>
  <string name="workOrderLocation_label_area">Area</string>
  <string name="workOrderLocation_label_country">Country</string>
  <string name="workOrderLocation_label_latitude">Latitude</string>
  <string name="workOrderLocation_label_longitude">Longitude</string>
  <string name="employee_label_name">Name</string>
  <string name="employee_label_address">Address</string>
  <string name="employee_label_zone">Zone</string>
  <string name="employee_label_city">City</string>
  <string name="employee_label_province">Province</string>
  <string name="employee_label_region">Region</string>
  <string name="employee_label_area">Area</string>
  <string name="employee_label_country">Country</string>
  <string name="employee_label_phone">Phone</string>
  <string name="employee_label_cell">Cell</string>
  <string name="employee_label_fax">Fax</string>
  <string name="employee_label_voip">VoIP</string>
  <string name="employee_label_email">E-Mail</string>
  <string name="employee_label_web">Web</string>
  <string name="employee_label_taxPayerNumber">Tax Payer Number</string>
  <string name="employee_label_taxRegistrationNumber">Tax Registration Number</string>
  <string name="employee_label_startDate">Start Date</string>
  <string name="employee_label_endDate">End Date</string>
  <string name="event_label_eventDate">Event Date</string>
  <string name="event_label_eventStartTime">Event Start Time</string>
  <string name="event_label_eventEndTime">Event End Time</string>
  <string name="event_label_eventDescription">Event Description</string>
  <string name="event_label_eventContactPerson">Event Contact Person</string>
  <string name="event_label_workOrderName">Work Order Name</string>
  <string name="event_label_consultantName">Consultant Name</string>
  <string name="event_label_clientName">Client Name</string>
  <string name="event_label_notes">Event Notes</string>
  <string name="client_label_setEventDate">Set</string>
  <string name="client_label_setEventStartTime">Set</string>
  <string name="client_label_setEventEndTime">Set</string>
  <string name="client_label_setEventConsultant">Set</string>
  <string name="client_label_clearEventConsultant">Clear</string>
  <string name="client_label_setEventClient">Set</string>
  <string name="client_label_clearEventClient">Clear</string>
</resources>