<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <!-- Title -->
  <TextView
    android:gravity="center"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/app_name" />
  <!-- List Divider -->
  <View
    android:layout_height="1dip"
    android:layout_width="match_parent"
    android:background="?android:attr/listDivider" />
  <!-- Main Buttons -->
  <Button
    android:id="@+id/clients"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/main_label_clients" />
  <Button
    android:id="@+id/consultants"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/main_label_consultants" />
  <Button
    android:id="@+id/employees"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/main_label_employees" />
  <Button
    android:id="@+id/events"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/main_label_events" />
</LinearLayout>