<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <!-- Title -->
  <TextView
    android:id="@+id/title"
    android:gravity="center"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/title_background"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="### ADD OR MODIFY ###" />
  <!-- List Divider -->
  <View
    android:layout_height="1dip"
    android:layout_width="match_parent"
    android:background="?android:attr/listDivider" />
  <!-- Data Fields -->
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="0dip">
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_label_name" />
      <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textCapWords" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_label_address" />
      <EditText
        android:id="@+id/address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textCapWords" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_label_zone" />
      <EditText
        android:id="@+id/zone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textCapWords" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_label_city" />
      <EditText
        android:id="@+id/city"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textCapWords" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_label_province" />
      <EditText
        android:id="@+id/province"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textCapWords" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_label_region" />
      <EditText
        android:id="@+id/region"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textCapWords" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_label_area" />
      <EditText
        android:id="@+id/area"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textCapWords" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_label_country" />
      <EditText
        android:id="@+id/country"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textCapWords" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_label_phone" />
      <EditText
        android:id="@+id/phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_label_cell" />
      <EditText
        android:id="@+id/cell"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_label_fax" />
      <EditText
        android:id="@+id/fax"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_label_voip" />
      <EditText
        android:id="@+id/voip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_label_email" />
      <EditText
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailSubject" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_label_web" />
      <EditText
        android:id="@+id/web"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailSubject" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_label_taxPayerNumber" />
      <EditText
        android:id="@+id/taxPayerNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_label_taxRegistrationNumber" />
      <EditText
        android:id="@+id/taxRegistrationNumber"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_label_startDate" />
      <EditText
        android:id="@+id/startDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="date" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/employee_label_endDate" />
      <EditText
        android:id="@+id/endDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="date" />
    </LinearLayout>
  </ScrollView>
</LinearLayout>