<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <!-- Title -->
  <TextView
    android:id="@+id/title"
    android:gravity="center"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/title_background"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="### ADD OR MODIFY ###" />
  <!-- List Divider -->
  <View
    android:layout_height="1dip"
    android:layout_width="match_parent"
    android:background="?android:attr/listDivider" />
  <!-- Data Fields -->
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="0dip">
      <!--
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_label_employeeName" />
      <EditText
        android:id="@+id/employeeName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textCapWords" />
      -->
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_label_eventDate" />
      <EditText
        android:id="@+id/eventDate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:inputType="date" />
      <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
          android:id="@+id/pickEventDate"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/client_label_setEventDate" />
      </LinearLayout>      
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_label_eventStartTime" />
      <EditText
        android:id="@+id/eventStartTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:inputType="time" />
      <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
          android:id="@+id/pickEventStartTime"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/client_label_setEventStartTime" />
      </LinearLayout>      
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_label_eventEndTime" />
      <EditText
        android:id="@+id/eventEndTime"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:inputType="time" />
      <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
          android:id="@+id/pickEventEndTime"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/client_label_setEventEndTime" />
      </LinearLayout>      
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_label_eventDescription" />
      <EditText
        android:id="@+id/eventDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_label_eventContactPerson" />
      <EditText
        android:id="@+id/eventContactPerson"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_label_workOrderName" />
      <EditText
        android:id="@+id/workOrderName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords" />
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_label_consultantName" />
      <EditText
        android:id="@+id/consultantName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:inputType="textCapWords" />
      <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
          android:id="@+id/setEventConsultant"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/client_label_setEventConsultant" />
        <Button
          android:id="@+id/clearEventConsultant"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/client_label_clearEventConsultant" />
      </LinearLayout>      
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_label_clientName" />
      <EditText
        android:id="@+id/clientName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:inputType="textCapWords" />
      <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
          android:id="@+id/setEventClient"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/client_label_setEventClient" />
        <Button
          android:id="@+id/clearEventClient"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/client_label_clearEventClient" />
      </LinearLayout>      
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_label_notes" />
      <EditText
        android:id="@+id/notes"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapSentences|textMultiLine" />
     </LinearLayout>
  </ScrollView>
</LinearLayout>