<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <!-- Title -->
  <TextView
    android:id="@+id/title"
    android:gravity="center"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/title_background"
    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="### ADD OR MODIFY ###" />
  <!-- List Divider -->
  <View
    android:layout_height="1dip"
    android:layout_width="match_parent"
    android:background="?android:attr/listDivider" />
  <!-- Data Fields -->
  <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="0dip">
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/workOrderLocation_label_address" />
      <EditText
        android:id="@+id/address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textCapWords" />      
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/workOrderLocation_label_zone" />
      <EditText
        android:id="@+id/zone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textCapWords" />      
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/workOrderLocation_label_city" />
      <EditText
        android:id="@+id/city"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textCapWords" />      
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/workOrderLocation_label_province" />
      <EditText
        android:id="@+id/province"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textCapWords" />      
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/workOrderLocation_label_region" />
      <EditText
        android:id="@+id/region"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textCapWords" />      
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/workOrderLocation_label_area" />
      <EditText
        android:id="@+id/area"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textCapWords" />      
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/workOrderLocation_label_country" />
      <EditText
        android:id="@+id/country"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textCapWords" />      
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/workOrderLocation_label_latitude" />
      <EditText
        android:id="@+id/latitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />      
      <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/workOrderLocation_label_longitude" />
      <EditText
        android:id="@+id/longitude"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />      
    </LinearLayout>
  </ScrollView>
</LinearLayout>
