<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  xmlns:android="http://schemas.android.com/apk/res/android">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
      android:text="@string/businessArea_label_code"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
    <TextView
      android:id="@+id/code"
      android:gravity="right"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />
  </LinearLayout>
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
      android:text="@string/businessArea_label_description"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
    <TextView
      android:id="@+id/description"
      android:gravity="right"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />
  </LinearLayout>
  <RadioGroup
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <RadioButton
      android:id="@+id/businessAreaPrimary"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/clientBusinessAreas_label_primary" />
    <RadioButton
      android:id="@+id/businessAreaSecondary"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/clientBusinessAreas_label_secondary" />
    <RadioButton
      android:id="@+id/businessAreaNone"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:checked="true"
      android:text="@string/clientBusinessAreas_label_none" />
  </RadioGroup>
  <!-- List Divider -->
  <View
    android:layout_height="1dip"
    android:layout_width="match_parent"
    android:background="?android:attr/listDivider" />
</LinearLayout>